[BugFix] добавлены инициализации списков